@@ -16,6 +16,24 @@ package|;
 end_package
 begin_import
 import|import
+name|java
+operator|.
+name|io
+operator|.
+name|IOException
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Objects
+import|;
+end_import
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -36,7 +54,7 @@ specifier|public
 class|class
 name|IndexFormatTooNewException
 extends|extends
-name|CorruptIndexException
+name|IOException
 block|{
 comment|/** Creates an {@code IndexFormatTooNewException}    *    *  @param resourceDesc describes the file that was too old    *  @param version the version of the file that was too old    *  @param minVersion the minimum version accepted    *  @param maxVersion the maxium version accepted    *    * @lucene.internal */
 DECL|method|IndexFormatTooNewException
@@ -58,7 +76,11 @@ parameter_list|)
 block|{
 name|super
 argument_list|(
-literal|"Format version is not supported: "
+literal|"Format version is not supported (resource "
+operator|+
+name|resourceDesc
+operator|+
+literal|"): "
 operator|+
 name|version
 operator|+
@@ -71,15 +93,8 @@ operator|+
 name|maxVersion
 operator|+
 literal|")"
-argument_list|,
-name|resourceDesc
 argument_list|)
 expr_stmt|;
-assert|assert
-name|resourceDesc
-operator|!=
-literal|null
-assert|;
 block|}
 comment|/** Creates an {@code IndexFormatTooNewException}    *    *  @param in the open file that's too old    *  @param version the version of the file that was too old    *  @param minVersion the minimum version accepted    *  @param maxVersion the maxium version accepted    *    * @lucene.internal */
 DECL|method|IndexFormatTooNewException
@@ -101,10 +116,12 @@ parameter_list|)
 block|{
 name|this
 argument_list|(
-name|in
+name|Objects
 operator|.
 name|toString
-argument_list|()
+argument_list|(
+name|in
+argument_list|)
 argument_list|,
 name|version
 argument_list|,
